[DDW-170] Add final i18n copy

--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -112,25 +112,23 @@
   "global.duration.months": "月",
   "global.duration.seconds": "秒",
   "global.duration.years": "年",
-  "global.errors.failureAlert": "!!!Failure Alert",
   "global.errors.fieldIsRequired": "必須フィールドです",
   "global.errors.incompleteMnemonic": "{expected}語を入力して下さい。",
   "global.errors.invalidEmail": "入力されたメールアドレスは無効です。確認してください。",
   "global.errors.invalidMnemonic": "入力されたフレーズは無効です。確認してください。",
   "global.errors.invalidRepeatPassword": "一致しません",
-  "global.errors.invalidSpendingPassword": "無効なパスワード",
+  "global.errors.invalidSpendingPassword": "無効",
   "global.errors.invalidWalletName": "ウォレット名は3文字以上40文字以内に設定してください",
   "global.errors.paperWalletOpenPdfError": "置き換えようとしているファイルが開いています。ファイルを閉じてからもう一度お試しください。",
   "global.errors.rewardsOpenCsvError": "置き換えようとしているファイルが開いています。ファイルを閉じてからもう一度お試しください。",
-  "global.errors.strongSpendingPassword": "!!!Strong",
-  "global.errors.weakSpendingPassword": "!!!Weak",
+  "global.errors.strongSpendingPassword": "強い",
+  "global.errors.weakSpendingPassword": "弱い",
   "global.labels.all": "すべて",
   "global.labels.cancel": "キャンセル",
   "global.labels.change": "変更",
   "global.labels.close": "閉じる",
   "global.labels.create": "作成",
   "global.labels.filter": "フィルター",
-  "global.labels.readMore": "!!!Read More",
   "global.labels.remove": "削除",
   "global.labels.reset": "リセット",
   "global.labels.save": "保存する",
@@ -141,7 +139,7 @@
   "global.language.german": "ドイツ語",
   "global.language.japanese": "日本語",
   "global.language.korean": "韓国語",
-  "global.passwordInstructions": "パスワードは<strong>10文字</strong>以上であり、<strong>英字大文字</strong>、<strong>小文字</strong>、<strong>数字を各1文字</strong>以上含む必要があります。",
+  "global.passwordInstructions": "パスワードは<strong>10文字以上</strong>で設定してください。",
   "global.punctuation.colon": "：",
   "global.punctuation.dot": "。",
   "global.range.from": "開始",
@@ -281,12 +279,12 @@
   "staking.delegationCenter.delegate": "委任する",
   "staking.delegationCenter.description": "変更した委任設定は、現行の次のCardanoエポックが終了すると有効になります。インセンティブ付きテストネットのエポックの継続時間は1日です。今回の変更はすべて{timeUntilFutureEpoch}後に有効になります。",
   "staking.delegationCenter.epoch": "エポック",
-  "staking.delegationCenter.headingLeft": "次のCardanoエポック開始まであと",
+  "staking.delegationCenter.headingLeft": "Cardanoエポック{nextEpochNumber}開始まであと",
   "staking.delegationCenter.headingRight": "現在のCardanoエポック",
   "staking.delegationCenter.loadingStakePoolsMessage": "ステークプールをロードしています",
   "staking.delegationCenter.noWallets.createWalletButtonLabel": "ウォレットを作成する",
-  "staking.delegationCenter.noWallets.headLine": "委任センターはShelley対応のウォレットがないと利用できません。",
-  "staking.delegationCenter.noWallets.instructions": "ウォレットを作成し、{minDelegationFunds}ADA以上を移して（または既存の資金入りウォレットを復元して）から、改めてここでステークを委任してください。",
+  "staking.delegationCenter.noWallets.headLine": "委任センターはウォレットがないと利用できません。",
+  "staking.delegationCenter.noWallets.instructions": "ウォレットを作成（または既存のウォレットを復元）してから、改めてここでステークを委任してください。",
   "staking.delegationCenter.notDelegated": "委任未設定",
   "staking.delegationCenter.or": "または",
   "staking.delegationCenter.redelegate": "再設定する",
@@ -294,7 +292,7 @@
   "staking.delegationCenter.stakePoolTooltipTickerEarningRewards": "報酬を獲得中",
   "staking.delegationCenter.stakePoolTooltipTickerEpoch": "エポック{fromEpoch}より",
   "staking.delegationCenter.syncingTooltipLabel": "同期中 {syncingProgress}%",
-  "staking.delegationCenter.totalSlots": "総スロット数",
+  "staking.delegationCenter.totalSlots": "総スロット",
   "staking.delegationCenter.undelegate.dialog.calculatingFees": "手数料を計算しています",
   "staking.delegationCenter.undelegate.dialog.confirmButtonLabel": "委任を解除する",
   "staking.delegationCenter.undelegate.dialog.confirmIneligibleCheck": "ステークを委任していないと、報酬を得られないことを理解しました。",
@@ -307,9 +305,9 @@
   "staking.delegationCenter.undelegate.dialog.spendingPasswordPlaceholder": "送信時パスワードを入力してください",
   "staking.delegationCenter.undelegate.dialog.title": "委任を解除する",
   "staking.delegationCenter.undelegate.dialog.unknownStakePoolLabel": "不明の",
-  "staking.delegationCenter.undelegate.result.dialog.description1": "<strong>{walletName}</strong>ウォレットのステークは現在委任されておらず、まもなくこのウォレットへの報酬は停止されます。",
-  "staking.delegationCenter.undelegate.result.dialog.description2": "新しい委任設定はCardanoブロックチェーンに送信されました。<strong>この設定は現行の次のCardanoエポックが{timeUntilNextEpochStart}後に終了すると有効になります。</strong>それまでは、変更前の委任設定が有効のままとなります。",
-  "staking.delegationCenter.undelegate.result.dialog.title": "ウォレット委任は解除されました",
+  "staking.delegationCenter.undelegate.result.dialog.description1": "<strong>{walletName}</strong>ウォレットのステークは現在委任されておらず、まもなくこのウォレットへの報酬は停止します。",
+  "staking.delegationCenter.undelegate.result.dialog.description2": "新しい委任設定はブロックチェーンに送信され、<strong>現行の次のCardanoエポックが{timeUntilNextEpochStart}分後に終了すると有効になります。</strong>それまでは、変更前の委任設定が有効のままとなります。",
+  "staking.delegationCenter.undelegate.result.dialog.title": "ウォレットの委任は解除されました",
   "staking.delegationCenter.unknownStakePoolLabel": "不明の",
   "staking.delegationCenter.walletAmount": "{amount}ADA",
   "staking.delegationCountdown.buttonLabel": "もっと知る",
@@ -323,10 +321,10 @@
   "staking.delegationSetup.chooseStakePool.step.dialog.recentPoolsLabel": "最近選択したステークプールから選択する：",
   "staking.delegationSetup.chooseStakePool.step.dialog.searchInput.label": "または利用可能な全ステークプールのリストから選択する：",
   "staking.delegationSetup.chooseStakePool.step.dialog.searchInput.placeholder": "ステークプールを検索する",
-  "staking.delegationSetup.chooseStakePool.step.dialog.selectStakePoolLabel": "<span>{selectedWalletName}</span>ウォレットの資金を委任するステークプールを選んでください。",
+  "staking.delegationSetup.chooseStakePool.step.dialog.selectStakePoolLabel": "<span>{selectedWalletName}</span>ウォレットを委任するステークプールを選んでください。",
   "staking.delegationSetup.chooseStakePool.step.dialog.selectedStakePoolLabel": "<span>{selectedWalletName}</span>ウォレットの委任先に<span>「{selectedPoolTicker}」</span>ステークプールが選択されました。",
   "staking.delegationSetup.chooseStakePool.step.dialog.stepIndicatorLabel": "ステップ{currentStep}/{totalSteps}",
-  "staking.delegationSetup.chooseStakePool.step.dialog.title": "ステークプールを選択する",
+  "staking.delegationSetup.chooseStakePool.step.dialog.title": "ウォレットを委任する",
   "staking.delegationSetup.chooseWallet.step.dialog.continueButtonLabel": "続ける",
   "staking.delegationSetup.chooseWallet.step.dialog.description": "委任する資金の入ったウォレットを選んでください。委任を有効にするためには選択されたウォレットに<span>{minDelegationFunds}ADA以上</span>の資金が入っている必要があります。",
   "staking.delegationSetup.chooseWallet.step.dialog.errorMinDelegationFunds": "選択されたウォレットには委任を有効にするために必要な最低額{minDelegationFunds}ADAが入っていません。<span>{minDelegationFunds}ADA以上</span>入っているウォレットを選択して、[続ける]をクリックしてください。",
@@ -341,7 +339,7 @@
   "staking.delegationSetup.confirmation.step.dialog.description": "委任設定をCardanoブロックチェーンに送信して<span>{selectedWalletName}</span>ウォレットの委任先が<span>「{selectedPoolTicker}」</span>ステークプールであることを確認します。",
   "staking.delegationSetup.confirmation.step.dialog.feesLabel": "手数料",
   "staking.delegationSetup.confirmation.step.dialog.spendingPasswordLabel": "送信時パスワード",
-  "staking.delegationSetup.confirmation.step.dialog.spendingPasswordPlaceholder": "パスワードを入力してください",
+  "staking.delegationSetup.confirmation.step.dialog.spendingPasswordPlaceholder": "パスワード",
   "staking.delegationSetup.confirmation.step.dialog.stepIndicatorLabel": "ステップ{currentStep}/{totalSteps}",
   "staking.delegationSetup.confirmation.step.dialog.title": "委任を確認する",
   "staking.delegationSetup.intro.step.dialog.cancelButtonLabel": "キャンセル",
@@ -354,14 +352,14 @@
   "staking.delegationSetup.intro.step.dialog.stepsExplanation.step3": "委任の確認",
   "staking.delegationSetup.intro.step.dialog.title": "ウォレットを委任する",
   "staking.delegationSetup.notAvailable.dialog.closeButtonLabel": "閉じる",
-  "staking.delegationSetup.notAvailable.dialog.description": "委任に必要な<span>最低額{minDelegationFunds}ADA</span>が入ったウォレットがありません。",
-  "staking.delegationSetup.notAvailable.dialog.title": "現在委任できません",
+  "staking.delegationSetup.notAvailable.dialog.description": "委任に必要な<span>最低額{minDelegationFunds}ADA</span>が入ったウォレットがありません",
+  "staking.delegationSetup.notAvailable.dialog.title": "委任できません",
   "staking.delegationSetup.steps.step.1.label": "ウォレット",
   "staking.delegationSetup.steps.step.2.label": "ステークプール",
   "staking.delegationSetup.steps.step.3.label": "確認",
   "staking.delegationSetup.success.step.dialog.closeButtonLabel": "閉じる",
   "staking.delegationSetup.success.step.dialog.description.line1": "<span>{delegatedWalletName}</span>ウォレットのステークは<span>[{delegatedStakePoolTicker}] {delegatedStakePoolName}</span>ステークプールに委任されました。",
-  "staking.delegationSetup.success.step.dialog.description.line2": "新しい委任設定はCardanoブロックチェーンに送信されました。<strong>この設定は現行の次のCardanoエポックが{timeUntilNextEpochStart}後に終了すると有効になります</strong>。それまでは、変更前の委任設定が有効のままとなります。",
+  "staking.delegationSetup.success.step.dialog.description.line2": "新しい委任設定はブロックチェーンに送信され、<strong>現行の次のCardanoエポックが{timeUntilNextEpochStart}分後に終了すると有効になります。</strong>それまでは、変更前の委任設定が有効のままとなります。",
   "staking.delegationSetup.success.step.dialog.title": "ウォレットは委任されました",
   "staking.epochs.currentEpoch.tableHeader.pool": "ステークプール",
   "staking.epochs.currentEpoch.tableHeader.slotsElected": "選出されたスロット",
@@ -388,12 +386,12 @@
   "staking.rewards.learnMore.ButtonLabel": "もっと知る",
   "staking.rewards.learnMore.linkUrl": "https://iohk.zendesk.com/hc/ja/articles/900000026583",
   "staking.rewards.no.rewards": "報酬なし",
-  "staking.rewards.note": "ステークを委任することにより得た報酬は自動的に報酬アカウントに振り込まれ、ウォレット残高に追加されます。",
+  "staking.rewards.note": "<p>ステークを委任することにより得た報酬は自動的に報酬アカウントに振り込まれます。</p><p>インセンティブ付きテストネットで得た報酬は報酬ウォレット残高には追加されません。報酬はインセンティブ付きテストネット終了後にCardanoメインネットに実際のADAで支払われます。</p><p>ステークプールを運営するためにこのウォレットの資金を使用している場合、ここに表示される報酬には出資ステーク分が含まれる場合があります。これは、Cardanoメインネットに支払われる報酬残高には含まれません。</p>",
   "staking.rewards.tableHeader.date": "日付",
   "staking.rewards.tableHeader.pool": "ステークプール",
   "staking.rewards.tableHeader.reward": "報酬",
   "staking.rewards.tableHeader.wallet": "ウォレット",
-  "staking.rewards.title": "獲得した委任報酬",
+  "staking.rewards.title": "委任で獲得した報酬",
   "staking.stakePools.delegatingListTitle": "現在委任しているステークプール",
   "staking.stakePools.listTitle": "ステークプール ({pools})",
   "staking.stakePools.listTitleWithSearch": "ステークプール検索結果：({pools})",
@@ -421,7 +419,6 @@
   "static.about.copyright": "Input Output HK Limited. Licensed under",
   "static.about.license": "Apache 2.0 license",
   "static.about.title": "Daedalus",
-  "static.dummy.markdown": "!!!Content",
   "static.splash.network.buttonLabel": "了解しました",
   "static.splash.network.flightDescription1": "Daedalus Flightウォレットをダウンロードいただきありがとうございます。このDaedalusバージョンは、Daedalusウォレットの製品バージョンをメインネットへリリースする前に、ユーザーが新機能をテストし、開発チームが使用性に関するバグに対処するために特別に作成したバージョンです。",
   "static.splash.network.flightDescription2": "Flight候補版は機能性をテストするためにデザインされていますが、これはメインネットに接続されており、<b>メインネットのADAを使用します。Flight候補版を使用して実行されるトランザクションでは実際のADAによる支払いが生じます。</b>パワーユーザー以外は、完全にテスト済みの安定した製品版Daedalusウォレットの使用を継続することを推奨します。Daedalus Flightウォレットで実行されるトランザクションは実際のものであり、すべてのトランザクションはCardanoブロックチェーンにメインネット上で検証されるため、ユーザーの資金は実際に送金されるということを十分に理解してください。",
@@ -511,18 +508,6 @@
   "wallet.backup.recovery.phrase.entry.dialog.terms.and.condition.recovery": "コンピューターが喪失、故障、盗難、作動不能などとなった場合、ウォレットは復元フレーズを使用することによってのみ復元することができることを理解しました。",
   "wallet.backup.recovery.phrase.entry.dialog.terms.and.condition.rewards": "<strong>インセンティブ付きテストネットで得た報酬ADAをCardanoメインネットで受け取る際、このウォレットの復元フレーズが必要であることを理解しました。</strong>",
   "wallet.backup.recovery.phrase.entry.dialog.verification.instructions": "書き留めた通りの正しい順に単語をクリックして、ウォレットの復元フレーズを検証してください。",
-  "wallet.byron.badge.label": "残高",
-  "wallet.byron.notification.actionLearnMore": "もっと知る",
-  "wallet.byron.notification.actionMove": "既存のウォレットにADAを移す",
-  "wallet.byron.notification.addWallet": "ウォレットを新規作成する",
-  "wallet.byron.notification.addWalletDescription.line1": "「<q>{activeWalletName}</q>」はByronのレガシーウォレットであり、Shelleyの委任機能をサポートしていません。ステークを委任して報酬を得るには、すべての資金をこのウォレットからShelley対応の新ウォレットに移してください。",
-  "wallet.byron.notification.addWalletDescription.line2": "既存ウォレットはすべてByronのレガシーウォレットであるため、Shelleyウォレットを新規作成する必要があります。",
-  "wallet.byron.notification.addWalletTitle": "Shelleyウォレットを作成してください",
-  "wallet.byron.notification.learnMore.url": "https://iohk.zendesk.com/hc/ja/articles/360038726373",
-  "wallet.byron.notification.moveFundsDescription.line1": "「<q>{activeWalletName}</q>」はByronのレガシーウォレットであり、Shelleyの委任機能をサポートしていません。ステークを委任して報酬を得るには、すべての資金をこのウォレットからShelley対応の新ウォレットに移してください。",
-  "wallet.byron.notification.moveFundsDescription.line2": "{moveFundsLink}か、既存ウォレットの1つに資金を移すことができます。",
-  "wallet.byron.notification.moveFundsDescription.line2.link.label": "ウォレットを新規作成する",
-  "wallet.byron.notification.moveFundsTitle": "「{activeWalletName}」の資金を移してください",
   "wallet.create.dialog.configStep": "!!!Config",
   "wallet.create.dialog.create.personal.wallet.button.label": "ウォレットを作成する",
   "wallet.create.dialog.create.personal.wallet.button.label.itn": "Shelleyウォレットを作成する",
@@ -559,7 +544,15 @@
   "wallet.import.file.dialog.stateDirOptionLabel": "Daedalusステータスディレクトリー",
   "wallet.import.file.dialog.stateFolderLabel": "Daedalusステータスディレクトリーを選択してください:",
   "wallet.import.file.dialog.title": "ウォレットをインポートする",
+  "wallet.legacy.badge.label": "残高",
+  "wallet.legacy.notification.actionLearnMore": "もっと知る",
+  "wallet.legacy.notification.actionMove": "テストネット用ADAを移し替える",
+  "wallet.legacy.notification.addWallet": "Shelleyウォレットを新規作成する",
+  "wallet.legacy.notification.addWalletTitle": "報酬ウォレットを作成してください",
   "wallet.legacy.notification.descriptionWithFunds": "!!!\"{transferWalletName}\"\" is a legacy wallet. It does not support Shelley delegation features. To earn ada from delegating your stake, please move all funds from this wallet to a new, Shelley-compatible wallet. You can create a brand new wallet or move funds to one of the existing wallets.",
+  "wallet.legacy.notification.descriptionWithNoFunds": "!!!\"{transferWalletName}\"\" is a legacy wallet. It does not support Shelley delegation features. Move ada from this wallet to a Rewards wallet to delegate your testnet ada stake and earn rewards.",
+  "wallet.legacy.notification.learnMore.url": "https://iohk.zendesk.com/hc/ja/articles/360038726373",
+  "wallet.legacy.notification.moveFundsTitle": "「{activeWalletName}」のテストネット用ADAを移し替えてください",
   "wallet.navigation.more": "その他",
   "wallet.navigation.receive": "入金",
   "wallet.navigation.send": "送金",
@@ -643,9 +636,11 @@
   "wallet.restore.dialog.step.walletKind.hardwareWalletDisclaimer1": "ハードウェアウォレットでは、ウィルスやソフトウェアのバグなどコンピューターにありがちな脅威に晒されることなく、物理的なデバイス上に秘密鍵を安全に保管できます。ハードウェアウォレットの復元フレーズは常にオフラインで保管してください。Daedalusにハードウェアウォレットの復元フレーズを入力することにより、ハードウェアウォレットの秘密鍵をコンピューターやソフトウェアに関連するセキュリティリスクに晒すことになります。",
   "wallet.restore.dialog.step.walletKind.hardwareWalletDisclaimer2": "ハードウェアウォレットから復元した残高ウォレットは、資金を報酬ウォレットに移したら直ちに削除することを強くお勧めします。",
   "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind": "どのDaedalusウォレットを復元しますか",
-  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind12WordByron": "12語 <em>（Byronレガシーウォレット）</em>",
-  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind15WordShelley": "15語 <em>（Shelleyウォレット）</em>",
-  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind27WordPaper": "27語 - ペーパーウォレット <em>（Byronレガシーウォレット）</em>",
+  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindBalance12Word": "12語",
+  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindBalance12Word.itn": "12語 <em>(Byronレガシーウォレット)</em>",
+  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindBalance27Word": "27語 - ペーパーウォレット",
+  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindBalance27Word.itn": "27語 - ペーパーウォレット <em>(Byronレガシーウォレット)</em>",
+  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindReward15Word": "15語 <em>(Shelleyウォレット)</em>",
   "wallet.restore.dialog.step.walletKind.label.hardwareWalletKind": "どのタイプのハードウェアウォレットを復元しますか",
   "wallet.restore.dialog.step.walletKind.label.hardwareWalletKindLedger": "12語、18語、または24語 - Ledger Nano SまたはNano X (残高ウォレット)",
   "wallet.restore.dialog.step.walletKind.label.hardwareWalletKindTrezor": "12語、18語、または24語 - Trezor (残高ウォレット)",
@@ -654,8 +649,8 @@
   "wallet.restore.dialog.step.walletKind.label.walletKindHardware": "ハードウェアウォレット",
   "wallet.restore.dialog.step.walletKind.label.walletKindYoroi": "Yoroiウォレット",
   "wallet.restore.dialog.step.walletKind.label.yoroiWalletKind": "どのタイプのYoroiウォレットを復元しますか",
-  "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindByronLegacy15Word": "15語 <em>(Byronレガシーウォレット)</em>",
-  "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindShelley15Word": "15語 <em>(Shelleyウォレット)</em>",
+  "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindBalance15Word": "15語 <em>(Byronレガシーウォレット)</em>",
+  "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindReward15Word": "15語 <em>(Shelleyウォレット)</em>",
   "wallet.restore.dialog.stepsCounter": "ステップ{currentStep}/{totalSteps}",
   "wallet.restore.dialog.tab.title.certificate": "Daedalusペーパーウォレット",
   "wallet.restore.dialog.tab.title.recoveryPhrase": "Daedalusウォレット",
@@ -827,15 +822,16 @@
   "wallet.transaction.unresolvedInputAddressesLinkUnavailableLabel": "Cardanoエクスプローラーのリンクは現在使用できません。",
   "wallet.transactions.no.transactions": "トランザクションはありません",
   "wallet.transferFunds.dialog1.continueLabel": "続ける",
-  "wallet.transferFunds.dialog1.sourceWallet": "送金元Byronレガシーウォレット",
-  "wallet.transferFunds.dialog1.targetWallet": "入金先Shelley対応ウォレット",
-  "wallet.transferFunds.dialog1.title": "Byronレガシーウォレットの資金を移す",
+  "wallet.transferFunds.dialog1.sourceWallet": "送金元残高ウォレット",
+  "wallet.transferFunds.dialog1.targetWallet": "入金先報酬ウォレット",
+  "wallet.transferFunds.dialog1.title": "残高ウォレットの資金を移し替える",
   "wallet.transferFunds.dialog2.label.amount": "金額",
   "wallet.transferFunds.dialog2.label.buttonLabel": "資金を移す",
-  "wallet.transferFunds.dialog2.label.description": "{sourceWalletName}ウォレットから{targetWalletName}ウォレットへの送金内容を確認してください。",
+  "wallet.transferFunds.dialog2.label.description": "sourceWalletNameウォレットからtargetWalletNameウォレットへ移し替えます。",
   "wallet.transferFunds.dialog2.label.fees": "手数料",
+  "wallet.transferFunds.dialog2.label.to": "送信先",
   "wallet.transferFunds.dialog2.label.total": "合計",
-  "wallet.transferFunds.dialog2.passphraseFieldPlaceholder": "送信時パスワード",
+  "wallet.transferFunds.dialog2.passphraseFieldPlaceholder": "送信時パスワードを入力してください",
   "wallet.transferFunds.dialog2.passphraseLabel": "送信時パスワード",
-  "wallet.transferFunds.dialog2.title": "Byronレガシーウォレットの資金を移す"
+  "wallet.transferFunds.dialog2.title": "残高ウォレットの資金を移し替える"
 }
