--- a/source/renderer/app/i18n/locales/defaultMessages.json
+++ b/source/renderer/app/i18n/locales/defaultMessages.json
@@ -1425,13 +1425,13 @@
         "description": "Title \"Move funds from the legacy wallet\" on the legacy notification.",
         "end": {
           "column": 3,
-          "line": 24
+          "line": 18
         },
         "file": "source/renderer/app/components/notifications/LegacyNotification.js",
         "id": "wallet.byron.notification.moveFundsTitle",
         "start": {
           "column": 18,
-          "line": 19
+          "line": 13
         }
       },
       {
@@ -1439,69 +1439,13 @@
         "description": "Title \"Create a Shelley wallet\" on the legacy notification.",
         "end": {
           "column": 3,
-          "line": 29
+          "line": 23
         },
         "file": "source/renderer/app/components/notifications/LegacyNotification.js",
         "id": "wallet.byron.notification.addWalletTitle",
         "start": {
           "column": 18,
-          "line": 25
-        }
-      },
-      {
-        "defaultMessage": "!!!\"{transferWalletName}\"\" is a Byron legacy wallet that does not support Shelley delegation features. To earn ada from delegating your stake, please move all funds from this wallet to a new wallet that is Shelley-compatible.",
-        "description": "Legacy notification description.",
-        "end": {
-          "column": 3,
-          "line": 35
-        },
-        "file": "source/renderer/app/components/notifications/LegacyNotification.js",
-        "id": "wallet.byron.notification.moveFundsDescription.line1",
-        "start": {
-          "column": 29,
-          "line": 30
-        }
-      },
-      {
-        "defaultMessage": "!!!You can create a brand new wallet or move funds to one of your existing wallets.",
-        "description": "Legacy notification description.",
-        "end": {
-          "column": 3,
-          "line": 41
-        },
-        "file": "source/renderer/app/components/notifications/LegacyNotification.js",
-        "id": "wallet.byron.notification.moveFundsDescription.line2",
-        "start": {
-          "column": 29,
-          "line": 36
-        }
-      },
-      {
-        "defaultMessage": "!!!brand new wallet",
-        "description": "Legacy notification link label.",
-        "end": {
-          "column": 3,
-          "line": 46
-        },
-        "file": "source/renderer/app/components/notifications/LegacyNotification.js",
-        "id": "wallet.byron.notification.moveFundsDescription.line2.link.label",
-        "start": {
-          "column": 38,
-          "line": 42
-        }
-      },
-      {
-        "defaultMessage": "!!!\"{transferWalletName}\"\" is a legacy wallet. It does not support Shelley delegation features. To earn ada from delegating your stake, please move all funds from this wallet to a new, Shelley-compatible wallet. You can create a brand new wallet or move funds to one of the existing wallets.",
-        "description": "Legacy notification description WithFunds.",
-        "end": {
-          "column": 3,
-          "line": 52
-        },
-        "file": "source/renderer/app/components/notifications/LegacyNotification.js",
-        "id": "wallet.legacy.notification.descriptionWithFunds",
-        "start": {
-          "column": 24,
-          "line": 47
+          "line": 19
         }
       },
       {
@@ -1509,13 +1453,69 @@
         "description": "Legacy notification description.",
         "end": {
           "column": 3,
-          "line": 58
+          "line": 29
+        },
+        "file": "source/renderer/app/components/notifications/LegacyNotification.js",
+        "id": "wallet.byron.notification.moveFundsDescription.line1",
+        "start": {
+          "column": 29,
+          "line": 24
+        }
+      },
+      {
+        "defaultMessage": "!!!You can create a {moveFundsLink} or move funds to one of your existing wallets.",
+        "description": "Legacy notification description.",
+        "end": {
+          "column": 3,
+          "line": 35
+        },
+        "file": "source/renderer/app/components/notifications/LegacyNotification.js",
+        "id": "wallet.byron.notification.moveFundsDescription.line2",
+        "start": {
+          "column": 29,
+          "line": 30
+        }
+      },
+      {
+        "defaultMessage": "!!!brand new wallet",
+        "description": "Legacy notification link label.",
+        "end": {
+          "column": 3,
+          "line": 40
+        },
+        "file": "source/renderer/app/components/notifications/LegacyNotification.js",
+        "id": "wallet.byron.notification.moveFundsDescription.line2.link.label",
+        "start": {
+          "column": 22,
+          "line": 36
+        }
+      },
+      {
+        "defaultMessage": "!!!\"{transferWalletName}\"\" is a legacy wallet. It does not support Shelley delegation features. To earn ada from delegating your stake, please move all funds from this wallet to a new, Shelley-compatible wallet. You can create a brand new wallet or move funds to one of the existing wallets.",
+        "description": "Legacy notification description WithFunds.",
+        "end": {
+          "column": 3,
+          "line": 46
+        },
+        "file": "source/renderer/app/components/notifications/LegacyNotification.js",
+        "id": "wallet.legacy.notification.descriptionWithFunds",
+        "start": {
+          "column": 24,
+          "line": 41
+        }
+      },
+      {
+        "defaultMessage": "!!!\"{activeWalletName}\"\" is a Byron legacy wallet that does not support Shelley delegation features. To earn ada from delegating your stake, please move all funds from this wallet to a new wallet that is Shelley-compatible.",
+        "description": "Legacy notification description.",
+        "end": {
+          "column": 3,
+          "line": 52
         },
         "file": "source/renderer/app/components/notifications/LegacyNotification.js",
         "id": "wallet.byron.notification.addWalletDescription.line1",
         "start": {
           "column": 29,
-          "line": 53
+          "line": 47
         }
       },
       {
@@ -1523,13 +1523,13 @@
         "description": "Legacy notification description.",
         "end": {
           "column": 3,
-          "line": 64
+          "line": 58
         },
         "file": "source/renderer/app/components/notifications/LegacyNotification.js",
         "id": "wallet.byron.notification.addWalletDescription.line2",
         "start": {
           "column": 29,
-          "line": 59
+          "line": 53
         }
       },
       {
@@ -1537,27 +1537,27 @@
         "description": "Learn more action of legacy notification.",
         "end": {
           "column": 3,
-          "line": 69
+          "line": 63
         },
         "file": "source/renderer/app/components/notifications/LegacyNotification.js",
         "id": "wallet.byron.notification.actionLearnMore",
         "start": {
           "column": 19,
-          "line": 65
+          "line": 59
         }
       },
       {
-        "defaultMessage": "!!!Move ada from this wallet",
+        "defaultMessage": "!!!Move ada to an existing wallet",
         "description": "Move Move ada from this wallet of legacy notification.",
         "end": {
           "column": 3,
-          "line": 74
+          "line": 68
         },
         "file": "source/renderer/app/components/notifications/LegacyNotification.js",
         "id": "wallet.byron.notification.actionMove",
         "start": {
           "column": 14,
-          "line": 70
+          "line": 64
         }
       },
       {
@@ -1565,13 +1565,13 @@
         "description": "Create a new wallet action of legacy notification.",
         "end": {
           "column": 3,
-          "line": 79
+          "line": 73
         },
         "file": "source/renderer/app/components/notifications/LegacyNotification.js",
         "id": "wallet.byron.notification.addWallet",
         "start": {
           "column": 13,
-          "line": 75
+          "line": 69
         }
       },
       {
@@ -1579,13 +1579,13 @@
         "description": "\"Learn more\" link URL",
         "end": {
           "column": 3,
-          "line": 85
+          "line": 79
         },
         "file": "source/renderer/app/components/notifications/LegacyNotification.js",
         "id": "wallet.byron.notification.learnMore.url",
         "start": {
           "column": 20,
-          "line": 80
+          "line": 74
         }
       }
     ],
