--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -518,7 +518,7 @@
   "wallet.byron.notification.addWalletTitle": "Shelleyウォレットを作成してください",
   "wallet.byron.notification.learnMore.url": "https://iohk.zendesk.com/hc/ja/articles/360038726373",
   "wallet.byron.notification.moveFundsDescription.line1": "「<q>{activeWalletName}</q>」はByronのレガシーウォレットであり、Shelleyの委任機能をサポートしていません。ステークを委任して報酬を得るには、すべての資金をこのウォレットからShelley対応の新ウォレットに移してください。",
-  "wallet.byron.notification.moveFundsDescription.line2": "{link}か、既存ウォレットの1つに資金を移すことができます。",
+  "wallet.byron.notification.moveFundsDescription.line2": "{moveFundsLink}か、既存ウォレットの1つに資金を移すことができます。",
   "wallet.byron.notification.moveFundsDescription.line2.link.label": "ウォレットを新規作成する",
   "wallet.byron.notification.moveFundsTitle": "「{activeWalletName}」の資金を移してください",
   "wallet.create.dialog.configStep": "!!!Config",
