--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -827,16 +827,15 @@
   "wallet.transaction.unresolvedInputAddressesLinkUnavailableLabel": "Cardano Explorer link currently unavailable.",
   "wallet.transactions.no.transactions": "No transactions",
   "wallet.transferFunds.dialog1.continueLabel": "Continue",
-  "wallet.transferFunds.dialog1.sourceWallet": "From legacy wallet",
+  "wallet.transferFunds.dialog1.sourceWallet": "From Byron legacy wallet",
   "wallet.transferFunds.dialog1.targetWallet": "To Shelley-compatible wallet",
-  "wallet.transferFunds.dialog1.title": "Transfer funds from the legacy wallet",
+  "wallet.transferFunds.dialog1.title": "Transfer funds from the Byron legacy wallet",
   "wallet.transferFunds.dialog2.label.amount": "Amount",
   "wallet.transferFunds.dialog2.label.buttonLabel": "Transfer funds",
-  "wallet.transferFunds.dialog2.label.description": "Confirm transfer from {sourceWalletName} wallet to the {targetWalletName} wallet.",
+  "wallet.transferFunds.dialog2.label.description": "Confirm transfer from {sourceWalletName} wallet to {targetWalletName} wallet.",
   "wallet.transferFunds.dialog2.label.fees": "Fees",
-  "wallet.transferFunds.dialog2.label.to": "To",
   "wallet.transferFunds.dialog2.label.total": "Total",
-  "wallet.transferFunds.dialog2.passphraseFieldPlaceholder": "Type your spending password",
+  "wallet.transferFunds.dialog2.passphraseFieldPlaceholder": "Spending password",
   "wallet.transferFunds.dialog2.passphraseLabel": "Spending password",
-  "wallet.transferFunds.dialog2.title": "Transfer funds from the Balance wallet"
+  "wallet.transferFunds.dialog2.title": "Transfer funds from the Byron legacy wallet"
 }
