[DDW-280] Delegation Center Header

--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -279,7 +279,7 @@
   "staking.delegationCenter.delegate": "委任する",
   "staking.delegationCenter.description": "変更した委任設定は、現行の次のCardanoエポックが終了すると有効になります。インセンティブ付きテストネットのエポックの継続時間は1日です。今回の変更はすべて{timeUntilFutureEpoch}後に有効になります。",
   "staking.delegationCenter.epoch": "エポック",
-  "staking.delegationCenter.headingLeft": "Cardanoエポック{nextEpochNumber}開始まであと",
+  "staking.delegationCenter.headingLeft": "次のCardanoエポック開始まであと",
   "staking.delegationCenter.headingRight": "現在のCardanoエポック",
   "staking.delegationCenter.loadingStakePoolsMessage": "ステークプールをロードしています",
   "staking.delegationCenter.noWallets.createWalletButtonLabel": "ウォレットを作成する",
@@ -292,7 +292,7 @@
   "staking.delegationCenter.stakePoolTooltipTickerEarningRewards": "報酬を獲得中",
   "staking.delegationCenter.stakePoolTooltipTickerEpoch": "エポック{fromEpoch}より",
   "staking.delegationCenter.syncingTooltipLabel": "同期中 {syncingProgress}%",
-  "staking.delegationCenter.totalSlots": "総スロット",
+  "staking.delegationCenter.totalSlots": "総スロット数",
   "staking.delegationCenter.undelegate.dialog.calculatingFees": "手数料を計算しています",
   "staking.delegationCenter.undelegate.dialog.confirmButtonLabel": "委任を解除する",
   "staking.delegationCenter.undelegate.dialog.confirmIneligibleCheck": "ステークを委任していないと、報酬を得られないことを理解しました。",
