--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -279,7 +279,7 @@
   "staking.delegationCenter.delegate": "Delegate",
   "staking.delegationCenter.description": "Changes to delegation preferences will take effect after both the current and next Cardano epochs have completed. Epochs on the Incentivized Testnet last one day. Any changes made now will take effect in {timeUntilFutureEpoch}.",
   "staking.delegationCenter.epoch": "Epoch",
-  "staking.delegationCenter.headingLeft": "Cardano epoch {nextEpochNumber} starts in",
+  "staking.delegationCenter.headingLeft": "Next Cardano epoch starts in",
   "staking.delegationCenter.headingRight": "Current Cardano epoch",
   "staking.delegationCenter.loadingStakePoolsMessage": "Loading stake pools",
   "staking.delegationCenter.noWallets.createWalletButtonLabel": "Create a wallet",
