[DDW-280] Delegation center

--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -283,8 +283,8 @@
   "staking.delegationCenter.headingRight": "現在のCardanoエポック",
   "staking.delegationCenter.loadingStakePoolsMessage": "ステークプールをロードしています",
   "staking.delegationCenter.noWallets.createWalletButtonLabel": "ウォレットを作成する",
-  "staking.delegationCenter.noWallets.headLine": "委任センターはウォレットがないと利用できません。",
-  "staking.delegationCenter.noWallets.instructions": "ウォレットを作成（または既存のウォレットを復元）してから、改めてここでステークを委任してください。",
+  "staking.delegationCenter.noWallets.headLine": "委任センターはShelley対応のウォレットがないと利用できません。",
+  "staking.delegationCenter.noWallets.instructions": "ウォレットを作成し、{minDelegationFunds}ADA以上を移して（または既存の資金入りウォレットを復元して）から、改めてここでステークを委任してください。",
   "staking.delegationCenter.notDelegated": "委任未設定",
   "staking.delegationCenter.or": "または",
   "staking.delegationCenter.redelegate": "再設定する",
@@ -321,10 +321,10 @@
   "staking.delegationSetup.chooseStakePool.step.dialog.recentPoolsLabel": "最近選択したステークプールから選択する：",
   "staking.delegationSetup.chooseStakePool.step.dialog.searchInput.label": "または利用可能な全ステークプールのリストから選択する：",
   "staking.delegationSetup.chooseStakePool.step.dialog.searchInput.placeholder": "ステークプールを検索する",
-  "staking.delegationSetup.chooseStakePool.step.dialog.selectStakePoolLabel": "<span>{selectedWalletName}</span>ウォレットを委任するステークプールを選んでください。",
+  "staking.delegationSetup.chooseStakePool.step.dialog.selectStakePoolLabel": "<span>{selectedWalletName}</span>ウォレットの資金を委任するステークプールを選んでください。",
   "staking.delegationSetup.chooseStakePool.step.dialog.selectedStakePoolLabel": "<span>{selectedWalletName}</span>ウォレットの委任先に<span>「{selectedPoolTicker}」</span>ステークプールが選択されました。",
   "staking.delegationSetup.chooseStakePool.step.dialog.stepIndicatorLabel": "ステップ{currentStep}/{totalSteps}",
-  "staking.delegationSetup.chooseStakePool.step.dialog.title": "ウォレットを委任する",
+  "staking.delegationSetup.chooseStakePool.step.dialog.title": "ステークプールを選択する",
   "staking.delegationSetup.chooseWallet.step.dialog.continueButtonLabel": "続ける",
   "staking.delegationSetup.chooseWallet.step.dialog.description": "委任する資金の入ったウォレットを選んでください。委任を有効にするためには選択されたウォレットに<span>{minDelegationFunds}ADA以上</span>の資金が入っている必要があります。",
   "staking.delegationSetup.chooseWallet.step.dialog.errorMinDelegationFunds": "選択されたウォレットには委任を有効にするために必要な最低額{minDelegationFunds}ADAが入っていません。<span>{minDelegationFunds}ADA以上</span>入っているウォレットを選択して、[続ける]をクリックしてください。",
@@ -339,7 +339,7 @@
   "staking.delegationSetup.confirmation.step.dialog.description": "委任設定をCardanoブロックチェーンに送信して<span>{selectedWalletName}</span>ウォレットの委任先が<span>「{selectedPoolTicker}」</span>ステークプールであることを確認します。",
   "staking.delegationSetup.confirmation.step.dialog.feesLabel": "手数料",
   "staking.delegationSetup.confirmation.step.dialog.spendingPasswordLabel": "送信時パスワード",
-  "staking.delegationSetup.confirmation.step.dialog.spendingPasswordPlaceholder": "パスワード",
+  "staking.delegationSetup.confirmation.step.dialog.spendingPasswordPlaceholder": "パスワードを入力してください",
   "staking.delegationSetup.confirmation.step.dialog.stepIndicatorLabel": "ステップ{currentStep}/{totalSteps}",
   "staking.delegationSetup.confirmation.step.dialog.title": "委任を確認する",
   "staking.delegationSetup.intro.step.dialog.cancelButtonLabel": "キャンセル",
@@ -352,14 +352,14 @@
   "staking.delegationSetup.intro.step.dialog.stepsExplanation.step3": "委任の確認",
   "staking.delegationSetup.intro.step.dialog.title": "ウォレットを委任する",
   "staking.delegationSetup.notAvailable.dialog.closeButtonLabel": "閉じる",
-  "staking.delegationSetup.notAvailable.dialog.description": "委任に必要な<span>最低額{minDelegationFunds}ADA</span>が入ったウォレットがありません",
-  "staking.delegationSetup.notAvailable.dialog.title": "委任できません",
+  "staking.delegationSetup.notAvailable.dialog.description": "委任に必要な<span>最低額{minDelegationFunds}ADA</span>が入ったウォレットがありません。",
+  "staking.delegationSetup.notAvailable.dialog.title": "現在委任できません",
   "staking.delegationSetup.steps.step.1.label": "ウォレット",
   "staking.delegationSetup.steps.step.2.label": "ステークプール",
   "staking.delegationSetup.steps.step.3.label": "確認",
   "staking.delegationSetup.success.step.dialog.closeButtonLabel": "閉じる",
   "staking.delegationSetup.success.step.dialog.description.line1": "<span>{delegatedWalletName}</span>ウォレットのステークは<span>[{delegatedStakePoolTicker}] {delegatedStakePoolName}</span>ステークプールに委任されました。",
-  "staking.delegationSetup.success.step.dialog.description.line2": "新しい委任設定はブロックチェーンに送信され、<strong>現行の次のCardanoエポックが{timeUntilNextEpochStart}分後に終了すると有効になります。</strong>それまでは、変更前の委任設定が有効のままとなります。",
+  "staking.delegationSetup.success.step.dialog.description.line2": "新しい委任設定はCardanoブロックチェーンに送信されました。<strong>この設定は現行の次のCardanoエポックが{timeUntilNextEpochStart}後に終了すると有効になります</strong>。それまでは、変更前の委任設定が有効のままとなります。",
   "staking.delegationSetup.success.step.dialog.title": "ウォレットは委任されました",
   "staking.epochs.currentEpoch.tableHeader.pool": "ステークプール",
   "staking.epochs.currentEpoch.tableHeader.slotsElected": "選出されたスロット",
