--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -283,8 +283,8 @@
   "staking.delegationCenter.headingRight": "Current Cardano epoch",
   "staking.delegationCenter.loadingStakePoolsMessage": "Loading stake pools",
   "staking.delegationCenter.noWallets.createWalletButtonLabel": "Create a wallet",
-  "staking.delegationCenter.noWallets.headLine": "The Delegation Center is not available because you don't have any wallets.",
-  "staking.delegationCenter.noWallets.instructions": "Create a new wallet (or restore an existing one) then come back here to delegate your stake.",
+  "staking.delegationCenter.noWallets.headLine": "The delegation center is not available because you currently do not have any Shelley-compatible wallets.",
+  "staking.delegationCenter.noWallets.instructions": "Create a new wallet and transfer in a minimum of {minDelegationFunds} ada (or restore an existing wallet with funds), then return here to delegate your stake.",
   "staking.delegationCenter.notDelegated": "Undelegated",
   "staking.delegationCenter.or": "or",
   "staking.delegationCenter.redelegate": "Redelegate",
@@ -318,28 +318,28 @@
   "staking.delegationSetup.chooseStakePool.step.dialog.delegatedStakePoolLabel": "You are already delegating <span>{selectedWalletName}</span> wallet to <span>[{selectedPoolTicker}]</span> stake pool. <span>If you wish to re-delegate your stake, please select a different pool.</span>",
   "staking.delegationSetup.chooseStakePool.step.dialog.delegatedStakePoolNextLabel": "You are already pending delegation <span>{selectedWalletName}</span> wallet to <span>[{selectedPoolTicker}]</span> stake pool. <span>If you wish to re-delegate your stake, please select a different pool.</span>",
   "staking.delegationSetup.chooseStakePool.step.dialog.description": "Currently selected stake pool:",
-  "staking.delegationSetup.chooseStakePool.step.dialog.recentPoolsLabel": "Pick one of your recent stake pool choices:",
+  "staking.delegationSetup.chooseStakePool.step.dialog.recentPoolsLabel": "Choose one of your recent stake pool choices:",
   "staking.delegationSetup.chooseStakePool.step.dialog.searchInput.label": "Or select a stake pool from the list of all available stake pools:",
   "staking.delegationSetup.chooseStakePool.step.dialog.searchInput.placeholder": "Search stake pools",
-  "staking.delegationSetup.chooseStakePool.step.dialog.selectStakePoolLabel": "Select a stake pool to delegate to for <span>{selectedWalletName}</span> wallet.",
+  "staking.delegationSetup.chooseStakePool.step.dialog.selectStakePoolLabel": "Select a stake pool to receive your delegated funds in the <span>{selectedWalletName}</span> wallet.",
   "staking.delegationSetup.chooseStakePool.step.dialog.selectedStakePoolLabel": "You have selected <span>[{selectedPoolTicker}]</span> stake pool to delegate to for <span>{selectedWalletName}</span> wallet.",
   "staking.delegationSetup.chooseStakePool.step.dialog.stepIndicatorLabel": "STEP {currentStep} OF {totalSteps}",
-  "staking.delegationSetup.chooseStakePool.step.dialog.title": "Delegate wallet",
+  "staking.delegationSetup.chooseStakePool.step.dialog.title": "Choose a stake pool",
   "staking.delegationSetup.chooseWallet.step.dialog.continueButtonLabel": "Continue",
-  "staking.delegationSetup.chooseWallet.step.dialog.description": "Choose a wallet with funds that you want to delegate. The selected wallet must contain a <span>minimum amount of {minDelegationFunds} ADA</span> for delegation to be available.",
+  "staking.delegationSetup.chooseWallet.step.dialog.description": "Choose a wallet that holds the funds you want to delegate. The selected wallet must contain a <span>minimum amount of {minDelegationFunds} ADA</span> for delegation to be an option.",
   "staking.delegationSetup.chooseWallet.step.dialog.errorMinDelegationFunds": "This wallet does not contain the minimum amount of {minDelegationFunds} ADA which is required for delegation to be available. Please select a wallet with <span>a minimum amount of {minDelegationFunds} ADA</span> and click continue.",
   "staking.delegationSetup.chooseWallet.step.dialog.errorRestoringWallet": "This wallet can’t be used for delegation while it’s being synced.",
   "staking.delegationSetup.chooseWallet.step.dialog.selectWalletInputLabel": "Wallet",
-  "staking.delegationSetup.chooseWallet.step.dialog.selectWalletInputPlaceholder": "Select Wallet",
+  "staking.delegationSetup.chooseWallet.step.dialog.selectWalletInputPlaceholder": "Select wallet",
   "staking.delegationSetup.chooseWallet.step.dialog.stepIndicatorLabel": "STEP {currentStep} OF {totalSteps}",
   "staking.delegationSetup.chooseWallet.step.dialog.title": "Delegate wallet",
   "staking.delegationSetup.confirmation.step.dialog.calculatingFees": "Calculating fees",
   "staking.delegationSetup.confirmation.step.dialog.cancelButtonLabel": "Cancel",
   "staking.delegationSetup.confirmation.step.dialog.confirmButtonLabel": "Confirm",
-  "staking.delegationSetup.confirmation.step.dialog.description": "Confirm your delegation for <span>{selectedWalletName}</span> wallet to <span>[{selectedPoolTicker}]</span> stake pool by posting your delegation preferences on the Cardano blockchain.",
+  "staking.delegationSetup.confirmation.step.dialog.description": "Confirm your delegation choice to <span>[{selectedPoolTicker}]<span> stake pool for your <span>{selectedWalletName}<span> wallet by posting your delegation preferences on the Cardano blockchain.",
   "staking.delegationSetup.confirmation.step.dialog.feesLabel": "Fees",
   "staking.delegationSetup.confirmation.step.dialog.spendingPasswordLabel": "Spending password",
-  "staking.delegationSetup.confirmation.step.dialog.spendingPasswordPlaceholder": "Password",
+  "staking.delegationSetup.confirmation.step.dialog.spendingPasswordPlaceholder": "Enter your password",
   "staking.delegationSetup.confirmation.step.dialog.stepIndicatorLabel": "STEP {currentStep} OF {totalSteps}",
   "staking.delegationSetup.confirmation.step.dialog.title": "Confirm Delegation",
   "staking.delegationSetup.intro.step.dialog.cancelButtonLabel": "Cancel",
@@ -352,14 +352,14 @@
   "staking.delegationSetup.intro.step.dialog.stepsExplanation.step3": "Delegation confirmation",
   "staking.delegationSetup.intro.step.dialog.title": "Delegate wallet",
   "staking.delegationSetup.notAvailable.dialog.closeButtonLabel": "Close",
-  "staking.delegationSetup.notAvailable.dialog.description": "None of your wallets have the <span>minimum amount of {minDelegationFunds} ada</span> required for delegation",
-  "staking.delegationSetup.notAvailable.dialog.title": "Delegation not available",
+  "staking.delegationSetup.notAvailable.dialog.description": "None of your wallets currently hold the <span>minimum amount of {minDelegationFunds} that is required for delegation options.",
+  "staking.delegationSetup.notAvailable.dialog.title": "Delegation is not currently available",
   "staking.delegationSetup.steps.step.1.label": "Wallet",
   "staking.delegationSetup.steps.step.2.label": "Stake pool",
   "staking.delegationSetup.steps.step.3.label": "Confirmation",
   "staking.delegationSetup.success.step.dialog.closeButtonLabel": "Close",
   "staking.delegationSetup.success.step.dialog.description.line1": "The stake from your wallet <span>{delegatedWalletName}</span> is now delegated to the <span>[{delegatedStakePoolTicker}] {delegatedStakePoolName}</span> stake pool.",
-  "staking.delegationSetup.success.step.dialog.description.line2": "Your new delegation preferences are now posted on the blockchain <strong>and will take effect after both the current and next Cardano epochs have completed in {timeUntilNextEpochStart}</strong>. During this time, your previous delegation preferences are still active.",
+  "staking.delegationSetup.success.step.dialog.description.line2": "Your new delegation preferences are now posted on the Cardano blockchain. <strong>These preferences will take effect after both the current and the next Cardano epochs have completed in {timeUntilNextEpochStart}.</strong>. During this time, your previous delegation preferences remain active.",
   "staking.delegationSetup.success.step.dialog.title": "Wallet Delegated",
   "staking.epochs.currentEpoch.tableHeader.pool": "Stake pool",
   "staking.epochs.currentEpoch.tableHeader.slotsElected": "Slots elected",
