--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -302,11 +302,11 @@
   "staking.delegationCenter.undelegate.dialog.feesLabel": "Fees",
   "staking.delegationCenter.undelegate.dialog.passwordError": "Incorrect spending password.",
   "staking.delegationCenter.undelegate.dialog.spendingPasswordLabel": "Spending password",
-  "staking.delegationCenter.undelegate.dialog.spendingPasswordPlaceholder": "Type your spending password here",
+  "staking.delegationCenter.undelegate.dialog.spendingPasswordPlaceholder": "Enter spending password",
   "staking.delegationCenter.undelegate.dialog.title": "Undelegate",
   "staking.delegationCenter.undelegate.dialog.unknownStakePoolLabel": "unknown",
   "staking.delegationCenter.undelegate.result.dialog.description1": "The stake from your wallet <strong>{walletName}</strong> is no longer delegated and you will soon stop earning rewards for this wallet.",
-  "staking.delegationCenter.undelegate.result.dialog.description2": "Your new delegation preferences are now posted on the blockchain <strong>and will take effect after both the current and next Cardano epochs have completed in {timeUntilNextEpochStart}</strong>. During this time, your previous delegation preferences are still active.",
+  "staking.delegationCenter.undelegate.result.dialog.description2": "Your new delegation preferences are now posted on the Cardano blockchain. <strong>These preferences will take effect after both the current and next Cardano epochs have completed in {timeUntilNextEpochStart}.</strong>. During this time, your previous delegation preferences remain active.",
   "staking.delegationCenter.undelegate.result.dialog.title": "Wallet undelegated",
   "staking.delegationCenter.unknownStakePoolLabel": "unknown",
   "staking.delegationCenter.walletAmount": "{amount} ADA",
@@ -386,7 +386,7 @@
   "staking.rewards.learnMore.ButtonLabel": "Learn more",
   "staking.rewards.learnMore.linkUrl": "https://iohk.zendesk.com/hc/en-us/articles/900000026583",
   "staking.rewards.no.rewards": "No rewards",
-  "staking.rewards.note": "<p>Rewards earned by delegating your stake are automatically collected into your reward account.</p><p>Rewards earned on the Incentivized Testnet are not added to your Rewards wallet balance. They will be paid to you in real ada on the Cardano mainnet after the end of the Incentivized Testnet.</p><p>If you are using funds from this wallet to operate a stake pool, the rewards displayed here may include your pledged stake, which will not be counted when reward balances are paid out on the Cardano mainnet.</p>",
+  "staking.rewards.note": "Rewards earned by delegating your stake are automatically collected into your reward account and added to your wallet balance.",
   "staking.rewards.tableHeader.date": "Date",
   "staking.rewards.tableHeader.pool": "Stake pool",
   "staking.rewards.tableHeader.reward": "Reward",
@@ -641,11 +641,9 @@
   "wallet.restore.dialog.step.walletKind.hardwareWalletDisclaimer1": "Hardware wallets keep your private keys stored securely on a physical device that is immune to common computer threats such as viruses and software bugs. Recovery phrases for hardware wallets should always be kept offline. By entering your hardware wallet recovery phrase in Daedalus, you are exposing your hardware wallet private keys to the security risks associated with computers and software.",
   "wallet.restore.dialog.step.walletKind.hardwareWalletDisclaimer2": "We strongly recommend that you delete the Balance wallet which is restored from your hardware wallet once you have moved any funds into a Rewards wallet.",
   "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind": "What kind of Daedalus wallet would you like to restore?",
-  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindBalance12Word": "12 words",
-  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindBalance12Word.itn": "12 words <em>(Byron legacy wallet)</em>",
-  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindBalance27Word": "27 words - paper wallet",
-  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindBalance27Word.itn": "27 words - paper wallet <em>(Byron legacy wallet)</em>",
-  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindReward15Word": "15 words <em>(Shelley wallet)</em>",
+  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind12WordByron": "12 words (Byron legacy wallet)",
+  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind15WordShelley": "15 words <em>(Shelley wallet)</em>",
+  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind27WordPaper": "27 words - paper wallet (Byron legacy wallet)",
   "wallet.restore.dialog.step.walletKind.label.hardwareWalletKind": "What kind of hardware wallet would you like to restore?",
   "wallet.restore.dialog.step.walletKind.label.hardwareWalletKindLedger": "12, 18 or 24 words - Ledger Nano S or Nano X (Balance wallet)",
   "wallet.restore.dialog.step.walletKind.label.hardwareWalletKindTrezor": "12, 18 or 24 words - Trezor (Balance wallet)",
@@ -654,8 +652,8 @@
   "wallet.restore.dialog.step.walletKind.label.walletKindHardware": "Hardware wallet",
   "wallet.restore.dialog.step.walletKind.label.walletKindYoroi": "Yoroi wallet",
   "wallet.restore.dialog.step.walletKind.label.yoroiWalletKind": "What kind of Yoroi wallet would you like to restore?",
-  "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindBalance15Word": "15 words <em>(Byron legacy wallet)</em>",
-  "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindReward15Word": "15 words <em>(Shelley wallet)</em>",
+  "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindByronLegacy15Word": "15 words <em>(Byron legacy wallet)</em>",
+  "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindShelley15Word": "15 words <em>(Shelley wallet)</em>",
   "wallet.restore.dialog.stepsCounter": "Step {currentStep} of {totalSteps}",
   "wallet.restore.dialog.tab.title.certificate": "Daedalus paper wallet",
   "wallet.restore.dialog.tab.title.recoveryPhrase": "Daedalus wallet",
