--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -305,9 +305,9 @@
   "staking.delegationCenter.undelegate.dialog.spendingPasswordPlaceholder": "送信時パスワードを入力してください",
   "staking.delegationCenter.undelegate.dialog.title": "委任を解除する",
   "staking.delegationCenter.undelegate.dialog.unknownStakePoolLabel": "不明の",
-  "staking.delegationCenter.undelegate.result.dialog.description1": "<strong>{walletName}</strong>ウォレットのステークは現在委任されておらず、まもなくこのウォレットへの報酬は停止します。",
-  "staking.delegationCenter.undelegate.result.dialog.description2": "新しい委任設定はブロックチェーンに送信され、<strong>現行の次のCardanoエポックが{timeUntilNextEpochStart}分後に終了すると有効になります。</strong>それまでは、変更前の委任設定が有効のままとなります。",
-  "staking.delegationCenter.undelegate.result.dialog.title": "ウォレットの委任は解除されました",
+  "staking.delegationCenter.undelegate.result.dialog.description1": "<strong>{walletName}</strong>ウォレットのステークは現在委任されておらず、まもなくこのウォレットへの報酬は停止されます。",
+  "staking.delegationCenter.undelegate.result.dialog.description2": "新しい委任設定はCardanoブロックチェーンに送信されました。<strong>この設定は現行の次のCardanoエポックが{timeUntilNextEpochStart}後に終了すると有効になります。</strong>それまでは、変更前の委任設定が有効のままとなります。",
+  "staking.delegationCenter.undelegate.result.dialog.title": "ウォレット委任は解除されました",
   "staking.delegationCenter.unknownStakePoolLabel": "不明の",
   "staking.delegationCenter.walletAmount": "{amount}ADA",
   "staking.delegationCountdown.buttonLabel": "もっと知る",
@@ -386,12 +386,12 @@
   "staking.rewards.learnMore.ButtonLabel": "もっと知る",
   "staking.rewards.learnMore.linkUrl": "https://iohk.zendesk.com/hc/ja/articles/900000026583",
   "staking.rewards.no.rewards": "報酬なし",
-  "staking.rewards.note": "<p>ステークを委任することにより得た報酬は自動的に報酬アカウントに振り込まれます。</p><p>インセンティブ付きテストネットで得た報酬は報酬ウォレット残高には追加されません。報酬はインセンティブ付きテストネット終了後にCardanoメインネットに実際のADAで支払われます。</p><p>ステークプールを運営するためにこのウォレットの資金を使用している場合、ここに表示される報酬には出資ステーク分が含まれる場合があります。これは、Cardanoメインネットに支払われる報酬残高には含まれません。</p>",
+  "staking.rewards.note": "ステークを委任することにより得た報酬は自動的に報酬アカウントに振り込まれ、ウォレット残高に追加されます。",
   "staking.rewards.tableHeader.date": "日付",
   "staking.rewards.tableHeader.pool": "ステークプール",
   "staking.rewards.tableHeader.reward": "報酬",
   "staking.rewards.tableHeader.wallet": "ウォレット",
-  "staking.rewards.title": "委任で獲得した報酬",
+  "staking.rewards.title": "獲得した委任報酬",
   "staking.stakePools.delegatingListTitle": "現在委任しているステークプール",
   "staking.stakePools.listTitle": "ステークプール ({pools})",
   "staking.stakePools.listTitleWithSearch": "ステークプール検索結果：({pools})",
@@ -641,11 +641,9 @@
   "wallet.restore.dialog.step.walletKind.hardwareWalletDisclaimer1": "ハードウェアウォレットでは、ウィルスやソフトウェアのバグなどコンピューターにありがちな脅威に晒されることなく、物理的なデバイス上に秘密鍵を安全に保管できます。ハードウェアウォレットの復元フレーズは常にオフラインで保管してください。Daedalusにハードウェアウォレットの復元フレーズを入力することにより、ハードウェアウォレットの秘密鍵をコンピューターやソフトウェアに関連するセキュリティリスクに晒すことになります。",
   "wallet.restore.dialog.step.walletKind.hardwareWalletDisclaimer2": "ハードウェアウォレットから復元した残高ウォレットは、資金を報酬ウォレットに移したら直ちに削除することを強くお勧めします。",
   "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind": "どのDaedalusウォレットを復元しますか",
-  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindBalance12Word": "12語",
-  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindBalance12Word.itn": "12語 <em>(Byronレガシーウォレット)</em>",
-  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindBalance27Word": "27語 - ペーパーウォレット",
-  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindBalance27Word.itn": "27語 - ペーパーウォレット <em>(Byronレガシーウォレット)</em>",
-  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindReward15Word": "15語 <em>(Shelleyウォレット)</em>",
+  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind12WordByron": "12語 <em>（Byronレガシーウォレット）</em>",
+  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind15WordShelley": "15語 <em>（Shelleyウォレット）</em>",
+  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind27WordPaper": "27語 - ペーパーウォレット <em>（Byronレガシーウォレット）</em>",
   "wallet.restore.dialog.step.walletKind.label.hardwareWalletKind": "どのタイプのハードウェアウォレットを復元しますか",
   "wallet.restore.dialog.step.walletKind.label.hardwareWalletKindLedger": "12語、18語、または24語 - Ledger Nano SまたはNano X (残高ウォレット)",
   "wallet.restore.dialog.step.walletKind.label.hardwareWalletKindTrezor": "12語、18語、または24語 - Trezor (残高ウォレット)",
@@ -654,8 +652,8 @@
   "wallet.restore.dialog.step.walletKind.label.walletKindHardware": "ハードウェアウォレット",
   "wallet.restore.dialog.step.walletKind.label.walletKindYoroi": "Yoroiウォレット",
   "wallet.restore.dialog.step.walletKind.label.yoroiWalletKind": "どのタイプのYoroiウォレットを復元しますか",
-  "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindBalance15Word": "15語 <em>(Byronレガシーウォレット)</em>",
-  "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindReward15Word": "15語 <em>(Shelleyウォレット)</em>",
+  "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindByronLegacy15Word": "15語 <em>(Byronレガシーウォレット)</em>",
+  "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindShelley15Word": "15語 <em>(Shelleyウォレット)</em>",
   "wallet.restore.dialog.stepsCounter": "ステップ{currentStep}/{totalSteps}",
   "wallet.restore.dialog.tab.title.certificate": "Daedalusペーパーウォレット",
   "wallet.restore.dialog.tab.title.recoveryPhrase": "Daedalusウォレット",
