--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -380,6 +380,7 @@
   "staking.navigation.info": "Info",
   "staking.navigation.rewards": "Rewards",
   "staking.navigation.stake_pools": "Stake pools",
+  "staking.redeemItnRewards.step1.title": "Redeem Incentivized Testnet rewards",
   "staking.rewards.exportButtonLabel": "Export CSV",
   "staking.rewards.learnMore.ButtonLabel": "Learn more",
   "staking.rewards.learnMore.linkUrl": "https://iohk.zendesk.com/hc/en-us/articles/900000026583",
