--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -434,9 +434,9 @@
   "static.splash.network.itnNetworkName": "Rewards",
   "static.splash.network.itnVersionName": "INCENTIVIZED TESTNET v1",
   "static.splash.network.linkLabel": "Learn more",
-  "static.splash.network.stnDescription": "This version of Daedalus has been created specifically for the use with the second phase of the Shelley Testnet.",
+  "static.splash.network.stnDescription": "This version of Daedalus has been created specifically for use with the Shelley balance check network. If you participated in the Incentivized Testnet program you can use this version of Daedalus to check your Incentivized Testnet rewards. You can do this by restoring a wallet using the 15-word wallet recovery phrase for your Daedalus Rewards wallet.",
   "static.splash.network.stnLinkUrl": "https://testnets.cardano.org/en/shelley/overview/",
-  "static.splash.network.stnVersionName": "SHELLEY TESTNET",
+  "static.splash.network.stnVersionName": "SHELLEY BALANCE CHECK",
   "static.splash.network.title": "Daedalus",
   "status.icons.checkYourInternetConnection": "Check your <b>Internet connection</b>",
   "status.icons.isNodeRespondingLoading": "Checking if Cardano node is <b>responding</b>",
