Update stake pool list Api endpoint integration

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -399,15 +399,13 @@
   "staking.stakePools.search.delegatingListTitle": "Staking pools you are delegating to",
   "staking.stakePools.search.listTitle": "Stake pools ({pools})",
   "staking.stakePools.search.searchInputPlaceholder": "Search stake pools",
-  "staking.stakePools.tooltip.controlledStake": "Controlled stake:",
   "staking.stakePools.tooltip.costPerEpoch": "Cost per epoch:",
   "staking.stakePools.tooltip.delegateButton": "Delegate to this pool",
   "staking.stakePools.tooltip.experimentalTooltipLabel": "Experimental feature, data may be inaccurate.",
-  "staking.stakePools.tooltip.performance": "Performance:",
-  "staking.stakePools.tooltip.pledgeAddressLabel": "Pledge address",
   "staking.stakePools.tooltip.producedBlocks": "Produced blocks:",
   "staking.stakePools.tooltip.profitMargin": "Pool margin:",
   "staking.stakePools.tooltip.ranking": "Rank:",
+  "staking.stakePools.tooltip.relativeStake": "Relative stake:",
   "staking.stakePools.tooltip.retirement": "Retirement in {retirementFromNow}",
   "staking.stakePools.tooltip.saturation": "Saturation:",
   "static.about.buildInfo": "{platform} build <strong>{build}</strong>, {apiName} Node <strong>{nodeVersion}</strong>, {apiName} Wallet <strong>{apiVersion}</strong>",
