--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -399,15 +399,13 @@
   "staking.stakePools.search.delegatingListTitle": "現在委任しているステークプール",
   "staking.stakePools.search.listTitle": "ステークプール ({pools})",
   "staking.stakePools.search.searchInputPlaceholder": "ステークプールを検索する",
-  "staking.stakePools.tooltip.controlledStake": "管理下のステーク：",
   "staking.stakePools.tooltip.costPerEpoch": "エポックごとのコスト：",
   "staking.stakePools.tooltip.delegateButton": "このプールに委任する",
   "staking.stakePools.tooltip.experimentalTooltipLabel": "実験的機能データは不正確な場合があります",
-  "staking.stakePools.tooltip.performance": "パフォーマンス：",
-  "staking.stakePools.tooltip.pledgeAddressLabel": "出資アドレス",
   "staking.stakePools.tooltip.producedBlocks": "生成ブロック数：",
   "staking.stakePools.tooltip.profitMargin": "プールマージン：",
   "staking.stakePools.tooltip.ranking": "ランク：",
+  "staking.stakePools.tooltip.relativeStake": "相対ステーク：",
   "staking.stakePools.tooltip.retirement": "あと{retirementFromNow}で終了",
   "staking.stakePools.tooltip.saturation": "飽和：",
   "static.about.buildInfo": "{platform} ビルド <strong>{build}</strong>, {apiName} Node <strong>{nodeVersion}</strong>, {apiName} Wallet <strong>{apiVersion}</strong>",
