--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -402,6 +402,7 @@
   "staking.stakePools.tooltip.costPerEpoch": "Cost per epoch:",
   "staking.stakePools.tooltip.delegateButton": "Delegate to this pool",
   "staking.stakePools.tooltip.experimentalTooltipLabel": "Experimental feature, data may be inaccurate.",
+  "staking.stakePools.tooltip.pledge": "Pledge:",
   "staking.stakePools.tooltip.producedBlocks": "Produced blocks:",
   "staking.stakePools.tooltip.profitMargin": "Pool margin:",
   "staking.stakePools.tooltip.ranking": "Rank:",
